objects/Discount__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Monthly Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_UUID__c</fullName>
        <description>This is updated from contract event when discounts are sent in Contract Sent Event.</description>
        <externalId>true</externalId>
        <label>Building UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is updated from contract event Sent for discounts (JIRA: CSI-525)</description>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mid-month invoice Discount</fullName>
                </value>
                <value>
                    <fullName>Regular Discount</fullName>
                </value>
                <value>
                    <fullName>Commitment Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_in_months__c</fullName>
        <formula>ROUND(IF( 
( End_Date__c - Start_Date__c ) / 365 * 12 &lt; 1, 1, (End_Date__c - Start_Date__c ) / 365 * 12 
),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration(in months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Discounts_In_Month__c</fullName>
        <description>This will be calculated by amount * number of months.
If duration is blank then only amount will be calculated.</description>
        <formula>IF(ISNULL(Duration_in_months__c), Amount__c, (Duration_in_months__c * Amount__c))</formula>
        <label>Total Discounts In # Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This is formula field which depends on the Discount Type and If the Discount Type is Commitment Term then, this field will be null.</description>
        <formula>IF(ISPICKVAL(Discount_Type__c,"Commitment Term"),null,IF (
MONTH( Start_Date__c ) = MONTH( End_Date__c ),
"One Time",
"Recurring"
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is formula field which depends on the Discount Type and If the Discount Type is Commitment Term then, this field will be null.</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promotion_code__c</fullName>
        <label>Promotion code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promotion_override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotion Override</label>
        <type>Checkbox</type>
    </fields>
    <label>Discount</label>
    <nameField>
        <displayFormat>DIS-{00000}</displayFormat>
        <label>Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Cant_end_date_that_is_before_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date can't be before Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_cant_be_more_than_a_year_fro</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Date__c &gt;= TODAY()+365</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Start Date must less than a year away.</errorMessage>
    </validationRules>
</CustomObject>